--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p>❤️'s</p>
         <img src="./assets/githublogo.png" alt="GitHub Logo" />
       </div>
-      <div class="cards"></div>
+      <div class="cards"></div> <!-- ADD CARD HERE -->
     </div>
     <script src="./GitHubCard/index.js"></script>
   </body>
